# page_and_link_download

./: .gitignore  .metadata  README.md  pubspec.yaml
.github/workflows/: release.yaml
android/app/src/main/: AndroidManifest.xml
lib/: download.dart  main.dart  nodes.dart  request.dart  response.dart  spider.dart
lib/graphwidget/: edge_render.dart  fruchmanreingold.dart  graph.dart  graphwidget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
